# synthgauge-reader

./: .gitignore  README.md  pyproject.toml  synthgauge_paper_v2.md
configs/: config_det_kp.yaml  config_keypoints.yaml  config_regression.yaml
data/: build_det_kp_from_coco.py  build_kp_yolo_pose_from_coco.py  build_regression_from_coco.py  build_yolo_from_coco.py  datasets.py  transforms.py  visualize_det_kp_samples.py  visualize_regression_samples.py
data/processed/: train_det_kp.jsonl  train_regression.jsonl  val_det_kp.jsonl  val_regression.jsonl
inference/: predict.py  visualize_det_kp_predictions.py  visualize_detection_predictions.py  visualize_keypoints_predictions.py  visualize_regression_predictions.py
models/: model.py
training/: eval.py  eval_det_kp.py  eval_det_yolo.py  eval_detection_yolo.py  eval_keypoints_yolo_pose.py  eval_regression.py  train.py  train_detection_yolo.py  train_keypoints_yolo_pose.py  train_regression.py
utils/: config.py  metrics.py  runtime.py
